--- a/src/app/(main)/components/DinamicBanner/DinamicBanner.module.css
+++ b/src/app/(main)/components/DinamicBanner/DinamicBanner.module.css
@@ -1,54 +1,18 @@
-/* mobile styles */
-
-.mobileContainer {
-    width: 100%;
-    padding-inline: 1rem;
+.desktopContainer {
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    position: relative;
-    flex-direction: row;
-    gap: 1.2rem;
-    margin-top: 1.5rem;
-    margin-bottom: 1.8rem;
+    width: Hug (343px)px;
+    height: Hug (30px)px;
+    top: 162px;
+    left: 19px;
+    gap: 18px;
+    opacity: 0px;
 }
 
-.goBackButton {
-    width: fit-content;
-    height: fit-content;
-    border: none;
-    background-color: transparent;
-    color: var(--clr-primary-2);
-}
-
-.title {
-    color: #333;
-    font-size: var(--fs-title);
-    font-weight: 700;
-    font-family: var(--ff-one);
-}
-
-
-
-/* Estilos para la vista QuienesSomos */
-
-.quienessomosDesktopContainer {
-    display: none; 
-}
-
-/* desktop styles */
-@media (min-width: 820px) {
-    .mobileContainer {
-        display: none;
-    }
-
-    .quienesSomosDesktopContainer {
+.banner {
     display: flex;
         flex-direction: row;
         width: 1440px;
-       
-        height: 800px;
-    
+        height: 467px;
         align-items: center;
         justify-content: center;
         border-radius: 1.1rem;
@@ -58,144 +22,64 @@
         margin-bottom: 2rem;
         overflow: hidden;
         gap: 30px;
-  
-        
-    }
+    
+}
 
-    .quienesSomosBannerImg {
-        width: 100%;
-        height: 617px;
-        height: 100%;
-        object-fit: cover;
-        border-top-left-radius: 0.4rem;
-        border-bottom-left-radius: 0.4rem;
-    }
+.bannerImg {
+    width: 60%;
+    height: 100%;   
+    object-fit: cover;
+    margin-left: 0;
+}
 
-    .quienesSomosBannerTextBox {
-        width: 60%;
-        height: 60%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 1rem 1rem;
-        gap: 0.8rem;
-        font-family: var(--ff-one);
-    }
+.bannerTextBox {
+    text-align: center;
+    color: var(--clr-grey-1);
+}
 
-    .quienesSomosBannerTitle {
+.bannerTitle {
+    font: var(--t-desktop-one);
+    color: var(--clr-two-500);
+    font-family: Philosopher;
     font-size: 50px;
-    font-weight: 600;
-    color: var(--clr-secondary-2);
+    font-style: italic;
+    font-weight: 700;
+    line-height: 65px;
     text-align: center;
-    color: var(--clr-primary-2);
-        font-family: var(--ff-two);
-        font-style: italic;
+}
+
+.bannerMessage {
+    font: var(--tx-desktop-two);
+    color: var(--clr-grey-2);
+}
+
+/* Estilos para dispositivos móviles */
+@media (max-width: 768px) {
+    .desktopContainer {
+        background-color: white;
+        width: Hug (343px)px;
+        height: Hug (30px)px;
+        top: 162px;
+        left: 19px;
+        gap: 18px;
+        opacity: 0px;
+    }
+
+    .banner {
+     background-color: white;
+     height: 100px;
         
     }
 
-    .quienesSomosBannerMessage {
-    font-size: var(--fs-title);
-    font-weight: 500;
-    color: var(--clr-secondary-2);
-    text-align: center;
-    text-wrap: pretty;
-      
+    .bannerTitle {
+        font: var(--t-mobile-one);
+        display: block;
     }
-}
 
-@media (min-width: 1440px) {
-    .desktopContainer {
-        width: 85%;
-        height: 20rem;
+    .bannerMessage {
+        font: var(--tx-mobile-two);
     }
-}
-
-@media (min-width: 2000px) {
-    .desktopContainer {
-        width: 65%;
-    }
-}
-
-/* Estilos para la vista Inicio */
-
-
-
-
-/* Estilos para la vista Programa */
-
-.programaDesktopContainer {
+    .bannerImg {
     display: none;
 }
-
-/* desktop styles */
-@media (min-width: 820px) {
-    .mobileContainer {
-        display: none;
-    }
-
-    .programaDesktopContainer {
-        display: flex;
-        flex-direction: row;
-        width: 1440px; 
-        height: 500px;
-        align-items: center;
-        justify-content: center;
-        border-radius: 1.1rem;
-        background-color: var(--clr-secondary-1);
-        margin-inline: auto;
-        margin-top: 3rem;
-        margin-bottom: 2rem;
-        overflow: hidden;
-        gap: 30px;
-
-
-    }
-
-    .programaBannerImg {
-        width: 100%;
-        height: 617px;
-        height: 100%;
-        object-fit: cover;
-        border-top-left-radius: 0.4rem;
-        border-bottom-left-radius: 0.4rem;
-    }
-
-    .programaBannerTextBox {
-        width: 60%;
-        height: 60%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 1rem 1rem;
-        gap: 0.8rem;
-        font-family: var(--ff-one);
-    }
-
-    .programaBannerTitle {
-        font-size: 50px;
-        font-weight: 600;
-        color: var(--clr-secondary-2);
-        text-align: center;
-        color: var(--clr-primary-2);
-        font-family: var(--ff-two);
-        font-style: italic;
-
-    }
-
-    .programaBannerMessage {
-        font-size: var(--fs-title);
-        font-weight: 500;
-        color: var(--clr-secondary-2);
-        text-align: center;
-        text-wrap: pretty;
-
-    }
 }
-
-/* Estilos para la vista Academia */
-
-/* Estilos para la vista Apoyo al cuidad */
-
-/* Estilos para la vista Foro */
